--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -1,9 +1,7 @@
 body {
     background-color: $color-bg;
     margin-top: 96px;
-
     main {
-
         // INDEX
         .hero {
             @include size(100%, auto);
@@ -105,6 +103,7 @@ body {
                     box-shadow: 30px 31px 44px 1px rgba(0, 0, 0, 0.83);
                     -webkit-box-shadow: 30px 31px 44px 1px rgba(0, 0, 0, 0.83);
                     -moz-box-shadow: 30px 31px 44px 1px rgba(0, 0, 0, 0.83);
+                    
                 }
             }
         }
@@ -530,14 +529,15 @@ body {
             @include flex(column, space-evenly, center);
             padding-top: 5rem;
             @extend .gradiente-secundario-top;
-
             div {
+                
                 @include size(60%, auto);
                 min-height: 30%;
                 @include flex(row, center, center);
                 background-color: $color-primario;
                 border-radius: 10px;
                 @include box-shadow();
+                overflow-x: hidden;
 
                 div {
                     @include size(85%, auto);
@@ -584,6 +584,7 @@ body {
                 .tarjeta-asesoria {
                     @include box-shadow();
                     transition: all ease 0.2s;
+                    overflow: hidden;
 
                     &:hover {
                         transform: scale(1.1);
@@ -653,15 +654,9 @@ body {
             div {
                 @include size(80%, 100%);
                 @include flex(column, space-evenly, center);
-                h2 {
-                    overflow: hidden;
-                }
                 a {
-                    overflow: hidden;
                     @include size(30%, auto);
-
                     button {
-                        
                         @include button-contenedor(false);
                         @include size(100%, 80px);
                         background-color: $color-botsecundario;
